# Algorithm-Distillation-RLHF

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
algorithm_distillation/: __init__.py  ad.py  task.py  task_manager.py  train.py
algorithm_distillation/models/: __init__.py  ad_transformer.py  gpt2.py  util.py
algorithm_distillation/models/rl/: ad_transformer.py  gpt2.py  util.py
algorithm_distillation/models/sb3_util/: __init__.py  callback.py  logger.py
algorithm_distillation/rl_tasks/: __init__.py  ad.py
algorithm_distillation/sb3_util/: __init__.py  callback.py  logger.py
algorithm_distillation/sentiment-data/: ppo_config.yml  ppo_roc_story_sentiment_rollouts.py  ppo_roc_story_sentiments.py  rollouts_as_lm_task.py  train_lm.py
algorithm_distillation/tasks/: utils.py
algorithm_distillation/tasks/lm/sentiment/: __init__.py  dataset.py  decode_rollouts.py  generate_ppo_roc_story_sentiment_rollouts.py  ppo_config.yml  ppo_sweep.yml
algorithm_distillation/tasks/rl/: __init__.py  task.py  task_manager.py
tests/: test_ad.py  test_env.py  test_module.py  test_sb3_util.py  test_util.py
